Changelog
=========


3.0.1 (unreleased)
------------------

- This Plone add-on now requires six >= 1.12.0. [mbaechtold]


3.0.0 (2020-03-23)
------------------

- Add support for Plone 5.2 and Python 3. [buchi]
- Also look for the instance port number in ``wsgi.ini``.  [maurits]


2.16.0 (2020-02-14)
-------------------

- Allow additional indexes to be reindexed in the WorkflowChainUpdater. [tinagerber]


2.15.2 (2020-01-27)
-------------------

- Fix missing values in IntIds catalog as we go within migrate_intid(). [djowett-ftw]


2.15.1 (2019-12-16)
-------------------

- Cleanup broken catalog brains on `NotFound`. [jone]


2.15.0 (2019-12-12)
-------------------

- Add context manager for disabling upgrade step marking. [jone]

- Do not mark upgrade steps as installed when not doing a full import. [jone]


2.14.1 (2019-11-08)
-------------------

- Migrate creators even when dublin core behaviors are not enabled. [jone]

- Migrate empty values in RichTextFields correctly.
  Fixes `https://github.com/4teamwork/izug.refegovservice/issues/2`. [djowett-ftw]


2.14.0 (2019-10-31)
-------------------

- Added ``--allow-outdated`` option to ``install`` command.
  This allows installing upgrades or profiles on a not up-to-date site.
  Fixes `issue 182 <https://github.com/4teamwork/ftw.upgrade/issues/182>`. [maurits]


2.13.0 (2019-08-22)
-------------------

- Added combine_bundles command for Plone 5.
  This combines JS/CSS bundles together.  [maurits]


2.12.2 (2019-06-19)
-------------------

- Make sure to always use a portal_migration tool wrapped in a RequestContainer.
  (Fixes "AttributeError: REQUEST" on a Plone 5.1.x upgrade) [lgraf]


2.12.1 (2019-06-18)
-------------------

- Choose actual port used by ZServer layer to run CommandAndInstance tests against. [lgraf]
- Disable Diazo on upgrades-plain for Plone 5.1.5 support. [jone]


2.12.0 (2018-07-26)
-------------------

- Allow marking upgrades as deferred so they won't be proposed by default. [deiferni]